force-app/main/default/objects/CardHolder__x/CardHolder__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>CardHolder</externalName>
    <label>CardHolder</label>
    <pluralLabel>CardHolders</pluralLabel>
</CustomObject>