force-app/main/default/objects/CardHolder__x/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Card number for card holders</description>
    <externalDeveloperName>CardNumber</externalDeveloperName>
    <label>Card Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>