force-app/main/default/objects/CardHolder__x/fields/Cardholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Cardholder_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Card Holder Name</description>
    <externalDeveloperName>CardholderName</externalDeveloperName>
    <label>Cardholder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>