force-app/main/default/objects/CardHolder__x/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Associated Id of credit card</description>
    <externalDeveloperName>CreditCardId</externalDeveloperName>
    <label>Credit Card</label>
    <length>255</length>
    <referenceTo>Credit_Card__x</referenceTo>
    <relationshipLabel>CardHolders</relationshipLabel>
    <relationshipName>CardHolders</relationshipName>
    <type>ExternalLookup</type>
</CustomField>